--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.13.1",
     "hbs": "~3.1.0",
     "knex": "^0.11.5",
+    "method-override": "^2.3.6",
     "morgan": "~1.6.1",
     "pg": "^5.1.0",
     "serve-favicon": "~2.3.0"
